Card Maker Version History
--------------------------
1.0.0.2
- Fixed a old bug related to the properties field and the shape element definition
- Massive overhaul to the Layout resize functionality... now with undo! (accessible in the project > layout context menu and via Resize button) (kek444/nhmkdev)
- Zoom level is now persisted per layout and saved in the project file (kek444)
- Always show selected element (kek444)
- Updated CSV quote handling "" support(kek444)
- Options for JavaScript escaping (salmelo)
- Fixed open functions (recents and open) to prompt if the current project has not been saved
- Added #switchkey functionality to switch statements so the key can be referenced
- The opacity of inline elements can be specified with an alpha value on the element color (assuming I am happy with the outcome).
- Updated project wide export image/pdf to skip layouts with references but no actual entries
- Removed translation for substrings that results in an error message (now it will just translate to an empty string)
- Added AddOverrideField to JavaScript definition functionality (Thanks to salmelo - github pull request)
- Added ability to translate rotated elements within the original and resulting bounds
- Inline images in FormattedText now default to size 1.0
- Fixed issue with Local Google Cache
- Fixed crash related to clearing the Image Cache and FormattedText (hopefully)
- Added individual export button to the canvas toolbar
- Added clipboard copy button to the canvas toolbar
- Added font preview to the font selection dialog.
- Fixed export issue involving use of the cardcount functionality
- Added background color for all element types
- Added zoom helpers (Fit + Fit Horizontal)... will someone need "Fit Vertical" ???
- Added inline background shape functionality
- Added inline background graphic functionality
- Added graphic tiling option ("tile size")
- Added switch alternative with a different delimiter (customizable!)